--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,6 +6,7 @@
     <string name="action_settings">Settings</string>
     <string name="schedule_button">Schedule</string>
     <string name="contacts_button">Contacts</string>
+    <string name="facebook_button">Facebook</string>
     <string name="map_button">Map</string>
     <string name="website_button">Website</string>
     <string name="title_activity_schedule">Schedule</string>
@@ -15,7 +16,8 @@
     <string name="title_activity_inno_1">Inno_1</string>
     <string name="title_activity_keynote_1">Keynote_1</string>
     <string name="thurs_action">Th</string>
-    <string name="fri_action">Fri</string>    
+    <string name="fri_action">Fri</string>
     <string name="sat_action">Sat</string>
-    
+    <string name="title_activity_facebook">Facebook</string>
+
 </resources>
