--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,6 +42,8 @@
     <string name="title_activity_plenary2">Plenary2</string>
     <string name="title_activity_workshops__panels_1">Workshops_Panels_1</string>
     <string name="title_activity_workshops__panels_2">Workshops_Panels_2</string>
-    <string name="title_activity_career_fair">CareerFair</string>
+    <string name="title_activity_career_fair">Career Fair</string>
+    <string name="title_activity_floor_plan">Floor Plan</string>
+    <string name="northwestbasement">Northwest Labs Basement Floor Plan</string>
 
 </resources>
